# life

./: .editorconfig  .gitignore  CMakeLists.txt  LICENSE.txt  Makefile  README.md  main.cpp
cmd/life/: main.cpp
cmd/physics/: main.cpp
docs/: life.md  nuclear.md  physics.md
include/: Automaton.h  Board.h  Logger.h  PhysicsWorld.h
src/: Automaton.cpp  Board.cpp  Logger.cpp  PhysicsWorld.cpp
